--- a/src/css/ProgressBar.module.css
+++ b/src/css/ProgressBar.module.css
@@ -1,7 +1,7 @@
 /* propgress bar */
 .progressBar {
 	/* outline: 1px solid tomato; */
-	height: 100%;
+	/* height: 100%; */
 	width: 1rem;
 
 	display: flex;
